--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,20 @@
-Package: ldbnrwApi
-Type: Package
-Title: Zugriff auf die GENESIS-Webservice-API der Landesdatenbank NRW
+Package: nrwbulk
+Title: Massendownload-Werkzeuge für die Landesdatenbank NRW (GENESIS 2020 API)
 Version: 0.1.0
+Description: Ermöglicht den automatisierten Massendownload von Tabellen, 
+    Metadaten und gesamten Statistikfamilien aus der Landesdatenbank NRW 
+    über die GENESIS 2020 API. Das Paket erleichtert insbesondere das 
+    Herunterladen großer Datenmengen in einheitlichen Formaten und 
+    unterstützt nachgelagerte Analyseprozesse.
 Authors@R: c(
     person(
         given = "placeanddataspace",
         role = c("aut", "cre"),
-        email = "PLACEHOLDER@example.com",
-        comment = c(ORCID = "https://github.com/placeanddataspace")))
-Description: Tools zum Zugriff auf die GENESIS-Webservice-API der Landesdatenbank
-    Nordrhein-Westfalen (IT.NRW). Enthalten sind Funktionen für Katalogabfragen
-    (Statistiken, Tabellen), Suchanfragen, das Abrufen von Metadaten, Variablen
-    sowie den Download einzelner Tabellen oder kompletter Statistikfamilien.
-    Unterstützt sowohl 'free' als auch authentifizierte API-Bereiche.
+        email = "maintainer@nrwbulk.invalid",
+        comment = c(Homepage = "https://github.com/placeanddataspace")))
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Imports:
@@ -26,5 +25,5 @@ Imports:
 Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-URL: https://github.com/placeanddataspace/ldbnrwApi
-BugReports: https://github.com/placeanddataspace/ldbnrwApi/issues
+URL: https://github.com/placeanddataspace/nrwbulk
+BugReports: https://github.com/placeanddataspace/nrwbulk/issues
